--- a/.gitconfig
+++ b/.gitconfig
@@ -25,10 +25,17 @@
 [branch "master"]
   remote = origin
   merge = refs/heads/master
-
+[user]
+	name = Gregory Huff
+	email = gregory.huff@gmail.com
+[credential]
+	helper = osxkeychain
+[core]
+	excludesfile = /Users/gregory_huff/.gitignore_global
+	editor = subl -n -w
 [difftool "sourcetree"]
 	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
-	path = 
+	path =
 [mergetool "sourcetree"]
 	cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
 	trustExitCode = true
